--- a/requirements.txt
+++ b/requirements.txt
@@ -5,11 +5,11 @@ numpy>=1.24.2
 opencv-python>=4.1.2
 pandas>=1.5.3
 psycopg2-binary>=2.9.3
-pymysql>=1.0.2
 python-dotenv>=0.20.0
-requests>=2.27.1
 scikit-learn
 seaborn>=0.12.2
-sqlalchemy>=1.4.37
 sympy>=1.10.1
 xgboost
+pickle
+streamlit
+plotly
