--- a/requirements.txt
+++ b/requirements.txt
@@ -4,12 +4,13 @@ matplotlib>=3.7.0
 numpy>=1.24.2
 opencv-python>=4.1.2
 pandas>=1.5.3
-psycopg2-binary>=2.9.3
+psycopg2-binary>=2.9.0
 python-dotenv>=0.20.0
-scikit-learn
+scikit-learn>=1.5.0
 seaborn>=0.12.2
 sympy>=1.10.1
-xgboost
-pickle
-streamlit
-plotly
+xgboost>=2.1.0
+pickle>=1.24.0
+streamlit>=1.24.0
+plotly>=5.17.0
+
