--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,7 @@ scikit-learn>=1.5.0
 seaborn>=0.12.2
 sympy>=1.10.1
 xgboost>=2.1.0
-pickle>=1.24.0
+#pickle>=1.24.0
 streamlit>=1.24.0
 plotly>=5.17.0
 
